Working Base CreateFile + OpenAPI Spec + Codegen
