# api/rest/_generated/openapi.yaml
@@ -3,11 +3,11 @@ info:
   title: Platrium Core API
   version: 0.0.0
 tags:
-  - name: FileSystem
+  - name: Files
 paths:
-  /fs/createfile:
+  /files/create:
     post:
-      operationId: FileSystem_createFile
+      operationId: Files_createFile
       summary: Create a new file
       description: Creates a New File for the Current User
       parameters: []
@@ -31,7 +31,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
       tags:
-        - FileSystem
+        - Files
       requestBody:
         required: true
         content:
